--- a/Codes/styles.css
+++ b/Codes/styles.css
@@ -2,6 +2,7 @@
 .navbar-nav{
   display: flex;
   align-items: flex-end;
+  
 }
 
 a img{
@@ -22,6 +23,8 @@ background-size: 100%;
 display:flex;
 align-items: center;
 justify-content: center;
+width:900px;
+max-width:100%;
 }
 
 .inner{
@@ -96,4 +99,8 @@ footer {
   width: 80px;
   height: 80px;
   border-radius: 50%;
+}
+
+i{
+  margin: 0 3px;
 }
